@@ -150,23 +150,9 @@ bool IconDatabase::isEnabled() const
     return false;
 }
 
-bool IconDatabase::imported()
-{
-    return false;
-}
-
-void IconDatabase::setImported(bool import)
-{
-}
-
 IconDatabase::~IconDatabase()
 {
     ASSERT_NOT_REACHED();
-}
-
-bool IconDatabase::checkIntegrity()
-{
-    return true;
 }
 
 void IconDatabase::checkIntegrityBeforeOpening()
