@@ -1,3 +1,10 @@
+2007-09-08  Mark Rowe  <mrowe@apple.com>
+
+        Qt build fix.  Move stub method implementations to the right class.
+
+        * WebCoreSupport/FrameLoaderClientQt.cpp:
+        (WebCore::FrameLoaderClientQt::didPerformFirstNavigation):
+
 2007-09-08  Brady Eidson  <beidson@apple.com>
 
         YABF (Yet Another Build Fix)
